<resources>
    <string name="app_name">МТСКП</string>
    <string name="InstructionText">Для продолжения введите номер поезда в формате ХХХА и номер штабного вагона</string>
    <string name="Greating">Добро</string>
    <string name="StartTextButton">Старт</string>
    <string name="CoachNumberText">Номер вагона</string>
    <string name="StartButtonText">Загрузить</string>
    <string name="CoachTextViewValue">Номер КРИ</string>
    <string name="TrainNumberTextViewValue">Номер поезда</string>
    <string name="TextTrainNumberTextView">Номер поезда</string>
    <string name="TrainSwitcher">Поиск поезда</string>
    <string name="CoachSwitcher">Поиск вагона</string>
    <string name="ImportData">Импорт</string>
    <string name="StartTitle">RHelper 1.0</string>
    <string name="LoadDataText">Поиск поезда/штабного вагона</string>
    <string name="ServiceText">Обновление данных</string>
    <string name="RevisionText">Ревизия поезда</string>
    <string name="ExitText">Выход</string>
    <string name="BackText">Назад</string>
    <string name="CoachActivityHeader">Ревизия вагона</string>
    <string name="SkudoppText">СКУДОПП</string>
    <string name="AutomaticDoorText">Автоматические двери</string>
    <string name="AddCoachInfoButtonText">Добавить вагон</string>
    <string name="StartRevision">Начать проверку</string>
    <string name="TrainRevisionHeader">Проверка поезда</string>
    <string name="CoachWorkerText">Проводник</string>
    <string name="SaveInfoTextString">Сохранить</string>
    <string name="MakeResultButtonText">Результат</string>
    <string name="DeleteStringText">Удалить</string>
    <string name="OrderButtonText">Уведомление</string>
    <string name="CheckBoxElectricityText">Электроснабжение</string>
    <string name="ProgressiveTextCheckBox">Прогрессивные нормы</string>
    <string name="SpinnerTextStateRadioGroupeHeader">Состояние/наличие</string>
    <string name="GoodRadioText">Исправен</string>
    <string name="FaultyRadioText">Неисправен</string>
    <string name="main_nodes_state_header_text">Состояние основных систем:</string>
    <string name="AddViolationButtonText">Добавить нарушение</string>
    <string name="FinishCoachRevisionTextButton">Завершить проверку</string>
    <string name="OrderHeaderText">Уведомление</string>
    <string name="OrderDateInputText">Дата уведомления</string>
    <string name="OrderNumberHitText">Номер уведомления</string>
    <string name="TrainMasterHintText">Начальник поезда</string>
    <string name="OrderTrainTeamButtonText">Поездная бригада</string>
    <string name="TrainNumberHint">Введите поезд</string>
    <string name="MasterDataInputText">ФИО работника</string>
    <string name="MasterTextView">Введите ФИО и выберете должность</string>
    <string name="ResultHeaderString">Результат проверки</string>
    <string name="ViolationCodeText">Код нарушения</string>
    <string name="ViolationNameText">Описание нарушения</string>
    <string name="EditAmmountText">Изменить количество</string>
    <string name="UpdateAmountText">Изменить количество</string>
    <string name="SearchHintText">Поиск…</string>
    <string name="CoachNumberTextHint">Номер КРИ</string>
    <string name="AddPerson">Поездная бригада</string>
    <string name="CleanList">Очистить список вагонов</string>
    <string name="OrderRouteInputText">Маршрут проверки</string>
    <string name="RevisionTypeText">Тип проверки</string>
    <string name="TraillingCarText">Прицепной</string>
    <string name="ReinspectionButtonText">Проверка худшего поезда</string>
    <string name="ReinspectionTextViewString">Проверка худшего поезда</string>
    <string name="CheckButtonText">Проверить</string>
    <string name="OrderHeaderString">Уведомление</string>
    <string name="SurnameCrewInputText">Введите ФИО работника</string>
    <string name="StepOneOfThreeOrder">Шаг 1/3</string>
    <string name="StepTwoOfThreeOrder">Шаг 2/3</string>
    <string name="StepThreeOfThreeOrder">Шаг 3/3</string>
    <string name="GreetingTextThreeStep">Внесите данные по поезду:</string>
    <string name="GreetingTextOneStep">Внесите установочные данные:</string>
    <string name="GreetingTextTwoStep">Внесите данные основных работников:</string>
    <string name="ToAnotherStepText">К следующему шагу</string>
    <string name="AddWorkerInOrder">Добавить работника</string>
    <string name="FinishMakingOrderText">К проверке</string>
    <string name="AutoinformatorText">Автоинформатор</string>
    <string name="ProgressText">Прогрессивные нормы</string>
    <string name="VideoregistratorText">Видеорегистратор</string>
    <string name="PortalText">Попутчик</string>
    <string name="CrewListHeaderText">Список работников</string>
    <string name="CoachListHeaderText">Список вагонов</string>
    <string name="QualityPassportTextString">Наличие паспорта качества</string>
    <string name="RevisionHeaderText">Проверка поезда</string>
    <string name="PositiveHasRadioText">Имеется</string>
    <string name="NegativeHasRadioText">Отсутствует</string>
    <string name="AddViolationForCoachTextDescription">Add violation for mainCoach</string>
    <string name="ViolationListHeaderText">Список нарушений</string>
    <string name="SaveAdditionalParameterDescriptionText">Save additional parameter</string>
    <string name="MakeRevisionResultDescriptionText">Закончить проверку</string>
    <string name="OrderText">Уведомление</string>
    <string name="TrainText">Поезд</string>
    <string name="ShowInfoAboutObjectDescription">Show info about object of revision</string>
    <string name="FinishRevisionDescription">Закончить проверку</string>
    <string name="ViolationCatalogButtonText">Классификатор</string>
    <string name="CoachNumberHeaderText">Номер вагона</string>
    <string name="EndWorkTextDescription">Завершить проверку</string>
    <string name="TrailingGroupText">Прицепная группа</string>
    <string name="MainTrainText">Основной состав</string>
    <string name="ViolationsText">Нарушения</string>
    <string name="ResultTextHeader">Результат проверки</string>
    <string name="MainStatsText">Основные данные</string>
    <string name="TrainInfoText">Информация по поезду</string>
    <string name="PriceTextString">Полный перечень товаров, выполненный шрифтом Брайля</string>
    <string name="RadioTextString">Радиоустановка</string>
    <string name="AddResolvedText">Устранено</string>
    <string name="AudioinformText">Аудиоинформирование</string>
    <string name="NoDataText">Нет данных</string>
    <string name="MainHeaderText">Основная информация</string>
    <string name="MainMenuHeaderText">Главное меню</string>
    <string name="AddStringText">Добавить</string>
    <string name="AdditionalParamsText">Дополнительные параметры</string>
    <string name="AddAttribText">Добавить признак</string>
    <string name="AddCommentString">Добавить примечание</string>
    <string name="GenerateReportText">Сформировать отчет</string>
</resources>